<resources>
    <string name="app_name">QSmartFashion</string>
    <string name="login_username_placeholder">Your Email</string>
    <string name="login_password_placeholder">Your Password</string>
    <string name="login_login_button">Log In</string>
    <string name="login_signup_button">Sign Up</string>

    <string name="login_error_dialog_title">Login Error</string>
    <string name="login_error_dialog_message">Please check your username and password and try again.</string>
    <string name="signup_error_dialog_title">Signup Error</string>
    <string name="signup_error_dialog_message">We could not register you at this time. Please check your internet connection or try again later.</string>

    <string name="settings_age_placeholder">Your Age</string>
    <string name="settings_age_unit">years</string>
    <string name="settings_height_placeholder">Your Height</string>
    <string name="settings_height_ft_placeholder">\'</string>
    <string name="settings_height_in_placeholder">\"</string>
    <string name="settings_weight_placeholder">Your Weight</string>
    <string name="settings_weight_unit">lbs</string>
    <string name="settings_save_button">Save</string>
    <string name="settings_cancel_button">Cancel</string>
    <string name="settings_edit_contacts_button">Set Contacts</string>
    <string name="title_activity_metrics">MetricsActivity</string>

    <string name="title_section_dashboard">Dashboard</string>
    <string name="title_section_profile">Profile</string>
    <string name="title_section_devices">Devices</string>
    <string name="title_section_contacts">Emergency Contacts</string>
    <string name="title_section_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string-array name="sex_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>
