<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green"
    tools:context=".MainActivity">

    <ImageView
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_logo"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <LinearLayout
        android:layout_margin="20dp"
        android:background="@drawable/rounded_rectangle"
        android:layout_marginTop="15dp"
        android:layout_below="@id/login_logo"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/login_username"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/login_username_placeholder"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/login_password"
            android:layout_marginBottom="5dp"
            android:inputType="textPassword"
            android:hint="@string/login_password_placeholder"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/login_login"
            android:layout_marginBottom="5dp"
            android:textColor="@color/off_red"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/login_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/login_signup"
            android:textColor="@color/off_red"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/login_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
